--- a/styles.css
+++ b/styles.css
@@ -274,6 +274,7 @@ button:hover {
     width: 100%;
     margin-bottom: 5px;
     font-size: 14px;
+    box-sizing: border-box;
 }
 
 .edit-buttons {
